--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 server.port=9000
 spring.datasource.url=jdbc:h2:mem:books;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.dialect=H2Dialect
