--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
-server.port=9000
-spring.datasource.url=jdbc:h2:mem:books;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:books;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=
 spring.datasource.password=
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.properties.hibernate.dialect=H2Dialect
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.sql=DEBUG
+spring.sql.init.mode=always
