--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.data.rest.base-path=/api/v2
+app.default-page-size=10
+app.default-page-number=0
